# aoc

./: .gitignore  pyproject.toml
adventofcode/day1/: first.py  second.py
adventofcode/day10/: first.py  second.py
adventofcode/day11/: first.py  second.py
adventofcode/day12/: first.py  second.py
adventofcode/day13/: first.py
adventofcode/day14/: first.py
adventofcode/day15/: first.py
adventofcode/day16/: first.py
adventofcode/day17/: first.py
adventofcode/day18/: first.py
adventofcode/day19/: first.py
adventofcode/day2/: first.py  second.py
adventofcode/day3/: first.py  second.py
adventofcode/day4/: first.py
adventofcode/day5/: first.py
adventofcode/day6/: first.py
adventofcode/day7/: first.py
adventofcode/day8/: first.py
adventofcode/day9/: first.py  second.py
adventofcode/template/: first.py
tests/day1/: test_first.py  test_second.py
tests/day2/: test_first.py  test_second.py
tests/day3/: test_first.py  test_second.py
